syntax = "proto3";

option go_package = "api_gw/pb";

import "api/app.proto";
import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  google.protobuf.Timestamp expired_at = 2;
}

message VerifyRequest {
  string access_token = 1;
}

message VerifyResponse {
  bool status = 1;
  optional User user = 2;
}